5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1613_1801.log
== TEST (2019-03-30 22:51:46) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("num"))
feitico=Abra+nome*3
print(feitico)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico=Abra+nome*3
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:52:19) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("num"))
feitico=(Abra+nome)*repeicoes
print(feitico)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico=(Abra+nome)*repeicoes
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:52:27) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("num"))
feitico=(Abra+nome)*repeicoes
print(feitico)
-- EXECUTION TIME:
0.28752
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1801/main.py", line 3, in <module>
    feitico=(Abra+nome)*repeicoes
NameError: name 'Abra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:52:46) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("num"))
feitico=(Abra+nome)*repeticoes
print(feitico)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico=(Abra+nome)*repeticoes
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:52:53) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("num"))
feitico=(Abra+nome)*repeticoes
print(feitico)
-- EXECUTION TIME:
0.180615
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1801/main.py", line 3, in <module>
    feitico=(Abra+nome)*repeticoes
NameError: name 'Abra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:54:51) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=("Abra+nome")*repeticoes
print(feitico)
-- OUTPUT:
Abra+nomeAbra+nomeAbra+nomeAbra+nomeAbra+nomeAbra+nomeAbra+nomeAbra+nome
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:54:57) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=("Abra+nome")*repeticoes
print(feitico)
-- EXECUTION TIME:
0.151377
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra+nomeAbra+nomeAbra+nomeAbra+nomeAbra+nomeAbra+nomeAbra+nomeAbra+nome
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra+nomeAbra+nome
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra+nome
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:55:53) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=Abra + nome*repeticoes
print(feitico)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico=Abra + nome*repeticoes
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:56:00) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=Abra + nome*repeticoes
print(feitico)
-- EXECUTION TIME:
0.254385
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1801/main.py", line 3, in <module>
    feitico=Abra + nome*repeticoes
NameError: name 'Abra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:56:33) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=(Abra + nome)*repeticoes
print("feitico")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico=(Abra + nome)*repeticoes
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:56:39) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=(Abra + nome)*repeticoes
print("feitico")
-- EXECUTION TIME:
0.160527
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1801/main.py", line 3, in <module>
    feitico=(Abra + nome)*repeticoes
NameError: name 'Abra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:58:51) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico="Abra+nome*repeticoes"
print(feitico)
-- OUTPUT:
Abra+nome*repeticoes
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:58:59) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico="Abra+nome*repeticoes"
print(feitico)
-- EXECUTION TIME:
0.13532
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra+nome*repeticoes
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra+nome*repeticoes
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra+nome*repeticoes
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:00:46) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=(abra+nome)*repeticoes
print(feitico)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico=(abra+nome)*repeticoes
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:00:52) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=(abra+nome)*repeticoes
print(feitico)
-- EXECUTION TIME:
0.181475
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1801/main.py", line 3, in <module>
    feitico=(abra+nome)*repeticoes
NameError: name 'abra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:01:22) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=abra+nome*repeticoes
print(feitico)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico=abra+nome*repeticoes
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:01:27) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=abra+nome*repeticoes
print(feitico)
-- EXECUTION TIME:
0.131166
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1801/main.py", line 3, in <module>
    feitico=abra+nome*repeticoes
NameError: name 'abra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:02:37) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico="Abra+nome*repeticoes"
print(feitico)
-- OUTPUT:
Abra+nome*repeticoes
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:02:43) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico="Abra+nome*repeticoes"
print(feitico)
-- EXECUTION TIME:
0.131474
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra+nome*repeticoes
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra+nome*repeticoes
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra+nome*repeticoes
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:03:25) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=(Abra+nome".")*repeticoes
print(feitico)
-- ERROR:
File "XXXX", line 3
    feitico=(Abra+nome".")*repeticoes
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:03:58) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=(Abra+nome)*repeticoes"."
print(feitico)
-- ERROR:
File "XXXX", line 3
    feitico=(Abra+nome)*repeticoes"."
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:04:13) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=(Abra+nome)*repeticoes
print(feitico".")
-- ERROR:
File "XXXX", line 4
    print(feitico".")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:04:45) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=(Abra+nome" ")*repeticoes
print(feitico)
-- ERROR:
File "XXXX", line 3
    feitico=(Abra+nome" ")*repeticoes
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:05:49) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=(Abra_+nome)*repeticoes
print(feitico)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico=(Abra_+nome)*repeticoes
NameError: name 'Abra_' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:06:04) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=(Abra_+nome)*repeticoes
print(feitico)
print(" ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico=(Abra_+nome)*repeticoes
NameError: name 'Abra_' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:06:11) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=(Abra_+nome)*repeticoes
print(feitico)
print(" ")
-- EXECUTION TIME:
0.264347
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1801/main.py", line 3, in <module>
    feitico=(Abra_+nome)*repeticoes
NameError: name 'Abra_' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:06:24) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=(Abra+nome)*repeticoes
print(feitico)
print(" ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico=(Abra+nome)*repeticoes
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:06:30) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=(Abra+nome)*repeticoes
print(feitico)
print(" ")
-- EXECUTION TIME:
0.131692
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1801/main.py", line 3, in <module>
    feitico=(Abra+nome)*repeticoes
NameError: name 'Abra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:06:42) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=float(input("numero"))
feitico=(Abra+nome)*repeticoes
print(feitico)
print(" ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico=(Abra+nome)*repeticoes
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:06:50) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=float(input("numero"))
feitico=(Abra+nome)*repeticoes
print(feitico)
print(" ")
-- EXECUTION TIME:
0.139059
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1801/main.py", line 3, in <module>
    feitico=(Abra+nome)*repeticoes
NameError: name 'Abra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:07:36) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=Abra + nome*repeticoes
print(feitico)
print(" ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico=Abra + nome*repeticoes
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:07:41) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=Abra + nome*repeticoes
print(feitico)
print(" ")
-- EXECUTION TIME:
0.110753
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1801/main.py", line 3, in <module>
    feitico=Abra + nome*repeticoes
NameError: name 'Abra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:07:49) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=Abra + nome*repeticoes
print(feitico)
print(" ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico=Abra + nome*repeticoes
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:07:53) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=Abra + nome*repeticoes
print(feitico)
print(" ")
-- EXECUTION TIME:
0.123626
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1801/main.py", line 3, in <module>
    feitico=Abra + nome*repeticoes
NameError: name 'Abra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:08:18) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=Abra + nome *repeticoes
print(feitico)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico=Abra + nome *repeticoes
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:08:23) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=Abra + nome *repeticoes
print(feitico)

-- EXECUTION TIME:
0.178285
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1801/main.py", line 3, in <module>
    feitico=Abra + nome *repeticoes
NameError: name 'Abra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:08:30) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=Abra + nome_ *repeticoes
print(feitico)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico=Abra + nome_ *repeticoes
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:08:36) 
-- CODE:
nome=input("nomedoobjeto")
repeticoes=int(input("numero"))
feitico=Abra + nome_ *repeticoes
print(feitico)

-- EXECUTION TIME:
0.147771
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1801/main.py", line 3, in <module>
    feitico=Abra + nome_ *repeticoes
NameError: name 'Abra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:57:13) 
-- CODE:
nome= input("nomedobjeto")
numero= input ("numero")
feitico=Abra + nome
repeticao= feitico*numero
print(repeticao)
-- EXECUTION TIME:
0.169745
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1801/main.py", line 3, in <module>
    feitico=Abra + nome
NameError: name 'Abra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:57:14) 
-- CODE:
nome= input("nomedobjeto")
numero= input ("numero")
feitico=Abra + nome
repeticao= feitico*numero
print(repeticao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico=Abra + nome
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:57:20) 
-- CODE:
nome= input("nomedobjeto")
numero= input ("numero")
feitico=Abra + nome
repeticao= feitico*numero
print(repeticao)
-- EXECUTION TIME:
0.239835
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1801/main.py", line 3, in <module>
    feitico=Abra + nome
NameError: name 'Abra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:44:51) 
-- CODE:
nome= input("nomedobjeto")
numero=int(input("numero"))
feitico=Abra + nome
repeticao= feitico*numero
print(repeticao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico=Abra + nome
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:45:23) 
-- CODE:
nome= input("nomedobjeto")
numero=int(input("numero"))
feitico="Abra + nome"
repeticao= feitico*numero
print(repeticao)
-- OUTPUT:
Abra + nomeAbra + nomeAbra + nomeAbra + nomeAbra + nomeAbra + nomeAbra + nomeAbra + nome
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:46:07) 
-- CODE:
nome= input("nomedobjeto")
numero=int(input("numero"))
feitico="Abra" + nome
repeticao= feitico*numero
print(repeticao)
-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:46:26) 
-- CODE:
nome= input("nomedobjeto")
numero=int(input("numero"))
feitico="Abra" + nome
repeticao= feitico*numero
print(repeticao)
-- EXECUTION TIME:
0.329431
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
AbracarroAbracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:47:15) 
-- CODE:
nome= input("nomedobjeto")
numero=int(input("numero"))
feitico= Abra + nome " "
repeticao= feitico*numero
print(repeticao)
-- ERROR:
File "XXXX", line 3
    feitico= Abra + nome " "
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:47:32) 
-- CODE:
nome= input("nomedobjeto")
numero=int(input("numero"))
feitico= Abra + nome" "
repeticao= feitico*numero
print(repeticao)
-- ERROR:
File "XXXX", line 3
    feitico= Abra + nome" "
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:47:54) 
-- CODE:
nome= input("nomedobjeto")
numero=int(input("numero"))
feitico= Abra + nome ("")
repeticao= feitico*numero
print(repeticao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico= Abra + nome ("")
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:48:23) 
-- CODE:
nome= input("nomedobjeto")
numero=int(input("numero"))
feitico="Abra" + nome ("")
repeticao= feitico*numero
print(repeticao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico="Abra" + nome ("")
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:48:36) 
-- CODE:
nome= input("nomedobjeto")
numero=int(input("numero"))
feitico="Abra" + nome ("")
repeticao= feitico*numero
print(repeticao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico="Abra" + nome ("")
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:49:28) 
-- CODE:
nome= input("nomedobjeto")
numero=int(input("numero"))
feitico= Abra + nome
repeticao= feitico*numero
print(repeticao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitico= Abra + nome
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:49:46) 
-- CODE:
nome= input("nomedobjeto")
numero=int(input("numero"))
abra=abra
feitico= Abra + nome
repeticao= feitico*numero
print(repeticao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    abra=abra
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:50:13) 
-- CODE:
nome= input("nomedobjeto")
numero=int(input("numero"))
f1=Abra
feitico= f1 + nome
repeticao= feitico*numero
print(repeticao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f1=Abra
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:50:43) 
-- CODE:
nome= input("nomedobjeto")
numero=int(input("numero"))
f1="Abra"
feitico= f1 + nome
repeticao= feitico*numero
print(repeticao)
-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:50:50) 
-- CODE:
nome= input("nomedobjeto")
numero=int(input("numero"))
f1="Abra"
feitico= f1 + nome
repeticao= feitico*numero
print(repeticao)
-- EXECUTION TIME:
0.201375
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
AbracarroAbracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:51:29) 
-- CODE:
nome= input("nomedobjeto")
numero=int(input("numero"))
f1="Abra"
espaço=" "
feitico= f1 + nome+ espaço
repeticao= feitico*numero
print(repeticao)
-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:51:44) 
-- CODE:
nome= input("nomedobjeto")
numero=int(input("numero"))
f1="Abra"
espaço=" "
feitico= f1 + nome+ espaço
repeticao= feitico*numero
print(repeticao)
-- EXECUTION TIME:
0.141954
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abracarro Abracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:52:28) 
-- CODE:
nome= input("nomedobjeto")
numero=int(input("numero"))
f1="Abra"
espaço=" "
feitico= "f1"+ "nome"+ espaço
repeticao= feitico*numero
print(repeticao)
-- OUTPUT:
f1nome f1nome f1nome f1nome f1nome f1nome f1nome f1nome
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:53:04) 
-- CODE:
nome= input("nomedobjeto")
numero=int(input("numero"))
f1="Abra"
espaço=" "
feitico= f1+espaço+ nome+ espaço
repeticao= feitico*numero
print(repeticao)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:53:10) 
-- CODE:
nome= input("nomedobjeto")
numero=int(input("numero"))
f1="Abra"
espaço=" "
feitico= f1+espaço+ nome+ espaço
repeticao= feitico*numero
print(repeticao)
-- EXECUTION TIME:
0.157069
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
